werk-parser/tests/fail/default_unknown_key.txt
error[P1001]: parse error
 --> INPUT:1:9
  |
1 | default foo = "..."
  |         ^ expected valid key for `default` statement
  |
  = help: one of `target`, `out-dir`, `print-commands`, `print-fresh`, `quiet`, `loud`, `explain`, `verbose`, `watch-delay`, `jobs`, or `edition`
